src/themes/codww/main.css
/* General Tag Classes */
BODY
{
    BACKGROUND-COLOR: #24281D; /*#12140d;*/
	color: #cad7b3; 
	font-family: Arial, Verdana, Helvetica, sans-serif; 
    font-size: 8pt;

	scrollbar-face-color: #3B412F;
	scrollbar-highlight-color: #88966C;
	scrollbar-shadow-color: #88966C; 
	scrollbar-3dlight-color: #222719; 
	scrollbar-arrow-color: #D0DFB2; 
	scrollbar-track-color: #24281D; 
	scrollbar-darkshadow-color: #000000;
}

TD
{ 
	font-family: Arial, Verdana, Helvetica, sans-serif; 
	font-size: 8pt; 
	color: #99A979;
}

/* Table / Border Classes */
.table_with_border
{ 
	background-color:#000000; /*#3B412F;*/
	border:1px solid;
	border-color: #88966C #171A12 #000000 #88966C; 

    background-image: url(images/background_subpage.jpg);
    background-repeat: repeat-x;
	background-position: 0 -110px;
}

.table_with_border_second
{ 
	background-color:#000000;
	border:1px solid;
	border-color: #171A12 #171A12 #171A12 #171A12; 

    background-image: url(images/background_subpage.jpg);
    background-repeat: repeat-x;
	background-position: 0 -140px;
}

.with_border
{
	text-indent:3px;
	background-color:#24281D;
	border:1px solid;
	border-color: #58673B #171A12 #171A12 #58673B; 
}

.with_border_alternate
{
	text-indent:3px;
	background-color:#3B412F;
	border:1px ridge;
	border-color: #99A979 #353B28 #353B28 #99A979; 
}

.mainheader
{ 	
	border:1px solid;
	background-color:#000000;
	border-color: #171A12 #353B28 #353B28 #171A12; 

    background-image: url(images/background_subpage.jpg);
    background-repeat: repeat-x;
	background-position: 0 0px;
}

.mainfooter
{ 
	height: 20px;
	background-color:#222719;
	border-top: #050A0F 1px solid;
	border-bottom: #050A0F 1px solid;
}

.imageborder
{
	border:1px solid;
	border-color: #171A12 #4A1C1D #4A1C1D #171A12; 
}

/* Link Classes */
.playerlink { color:#006699;  cursor:hand; }
.playerlink:hover { color:#FF0A0C; text-decoration: none; cursor:hand; }

/* Default Link Classes */
a:link,a:active,a:visited,a.postlink
{
	font-family: Arial, Verdana, Helvetica, sans-serif;
	font-weight:bold;
	background-color: transparent;
	color:#A4BC75;
	text-decoration:none;
}
a:hover
{
	font-family: Arial, Verdana, Helvetica, sans-serif;
	font-weight:bold;
	color:#E5F2CB;
}

img
{
	border: 0px;
}

/* Title Classes */
.title 
{
	font: bold 11px Arial, Verdana, Helvetica, sans-serif; 
	color: #D0DFB2;
	height: 20px;
	text-align:center;
	vertical-align:middle;

    background-color: #24281D;
    background-image: url(images/bg_3.png);
    background-repeat: repeat-x;
}
a.title, a.title:active, a.title:visited 
{
	font: bold 11px Arial, Verdana, Helvetica, sans-serif;
	color: #D0DFB2;
	TEXT-DECORATION: none;
}
a.title:hover 
{
	font: bold 11px Arial, Verdana, Helvetica, sans-serif;
	color: #E7F0D6; 
	TEXT-DECORATION: none;
}
.titleSecond
{
	font: bold 10px Arial, Verdana, Helvetica, sans-serif; 
	color: #E5F377;
	height: 18px;
	text-align:center;
	vertical-align:middle;

    background-color: #1C1014;
    background-image: url(images/bg_4.png);
    background-repeat: repeat-x;
}

/* Default Font Classes */
font
{
	font-family: Arial, Verdana, Helvetica, sans-serif;
	font-size: 8pt;
}

/* Cells for listening */
.line0
{
	font-size: 8pt;
	color: #B9B597;
	background-color: #171A12;
}
.line1
{
	font-size: 8pt;
	color: #B9B597;
	background-color: #3B4033;
}
.line2
{
	font-size: 8pt;
	color: #B9B597;
	background-color: #525749;
}
.line0:hover, .line1:hover, .line2:hover 
{ 
	color: #cad7b3;
	background-color: #717964; 
}
.tableBackground
{
	font-size: 8pt;
	color: #cad7b3;
	background-color: #3E4237;
}

/* Cell Columns */
.cellmenu1
{
	height: 16px;
	border:1px ridge;
	border-color: #88966C #353B28 #353B28 #88966C; 

	text-indent:5px;
	font: 10px Arial, Verdana, Helvetica, sans-serif;
	color: #E5CE7C;

	background-color: #6A7753;
    background-image: url(images/bg_1.png);
    background-repeat: repeat-x;
}
.cellmenu1_naked
{
	height: 16px;
	border:1px ridge;
	border-color: #88966C #353B28 #353B28 #88966C; 

	text-indent:5px;
	font-family: 10px Arial, Verdana, Helvetica, sans-serif;
	color: #E5CE7C;

	background-color: #6A7753;
}
.cellmenu1:hover, .cellmenu1_naked:hover
{ 
	color: #FBCB1C;
	text-decoration: none;
}
a.cellmenu1_link, a.cellmenu2_link
{
	color: #F9EDC0;
	text-decoration: underline;
}
a.cellmenu1_link:hover, a.cellmenu2_link:hover
{
	color: #F8DE82;
	text-decoration: none;
}

.cellmenu2
{
	height: 16px;
	border:1px ridge;
	border-color: #99A979 #353B28 #353B28 #99A979;

	text-indent:5px;
	font: 10px Arial, Verdana, Helvetica, sans-serif;
	color: #F3ECD2;

	background-color: #88966C;
    background-image: url(images/bg_2.png);
    background-repeat: repeat-x;
}
.cellmenu2_naked
{
	height: 16px;
	border:1px ridge;
	border-color: #99A979 #353B28 #353B28 #99A979;

	text-indent:5px;
	font: 10px Arial, Verdana, Helvetica, sans-serif;
	color: #F3ECD2;

	background-color: #88966C;
}
.cellmenu2:hover, .cellmenu2_naked:hover, a.cellmenu1_link:hover
{ 
	color: #FBCB1C;
	text-decoration: none;
}

/* Usefull Text Classes */
.WinnerTeam
{
	color: #127C35;
	text-decoration: none;
}
.LoserTeam
{
	color: #A53139;
	text-decoration: none;
}
.DrawTeam
{
	color: #2B78AB;
	text-decoration: none;
}
.ErrorMsg 
{
	font: bold 12px Arial, Verdana, Helvetica, sans-serif; 
	color: #FF2222;
	border:1px ridge;
	border-color: #58673B #171A12 #171A12 #58673B; 
}
.PriorityError
{
	color: #FFFFFF;
	background-color: #CC0000;
	border-top: black 1px solid;
	border-bottom: black 1px solid;
	border-right: gray 1px solid;
}
.PriorityWarning
{
	color: #FFFFFF;
	background-color: #AA6600;
	border-top: black 1px solid;
	border-bottom: black 1px solid;
	border-right: gray 1px solid;
}


/* Popup Helpers */
.popupcontent
{
	padding:2px;
	background-color: #171A12; 
	color: #FFFFFF; 
}

.playertext
{
/*	filter: glow(Color=#000000,Strength=1); */
}

/* Form elements */
select, input, textarea
{
	background-color: #171A12; 
	color:#D0DFB2; 
	font:bold 10px Verdana,Arial,Helvetica,sans-serif;
	border: 1px solid;
	border-color: #171A12 #353B28 #353B28 #171A12; 
}

/* TOP Menu Classes */
.topmenu1begin
{
	height: 20px;
	border:0px;
	padding: 2px 2px 0px 2px;
	vertical-align: middle;

	color: #FFDD22;
	font: 10px Arial, Verdana, Helvetica, sans-serif;
	background-color: #171A12;
}
.topmenu1
{
	height: 20px;
	border:1px ridge;
	border-color: #58673B #171A12 #171A12 #58673B; 
	padding: 2px 2px 0px 2px;
	vertical-align: middle;

	color: #FFDD22;
	font: 10px Arial, Verdana, Helvetica, sans-serif;
	background-color: #171A12;
}
.topmenu1end
{
	height: 20px;
	color: #FFDD22;
	font: 10px Arial, Verdana, Helvetica, sans-serif;
	background-color: #171A12;
}
.topmenu1:hover 
{ 
	color: #FDF8C1;
	border:1px inset;
	border-color: #58673B #171A12 #171A12 #58673B; 
	background-color: #7C846B;
	text-decoration: none;
}

.topmenu2begin
{
	height: 16px;
	border: 0px;
	padding: 2px 2px 0px 2px;
	vertical-align: middle;

	color: #FFDD22;
	font: 10px Arial, Verdana, Helvetica, sans-serif;
	background-color: #3B412F;
}
.topmenu2
{
	height: 16px;
	border:1px ridge;
	border-color: #58673B #171A12 #171A12 #58673B; 
	padding: 2px 2px 0px 2px;
	vertical-align: middle;

	color: #FFDD22;
	font: 10px Arial, Verdana, Helvetica, sans-serif;
	background-color: #3B412F;
}
.topmenu2end
{
	height: 16px;
	color: #FFDD22;
	font: 10px Arial, Verdana, Helvetica, sans-serif;
	background-color: #3B412F;
}
.topmenu2:hover 
{ 
	color: #FDF8C1;
	border:1px inset;
	border-color: #58673B #171A12 #171A12 #58673B; 
	background-color: #7C846B;
	text-decoration: none;
}
.topmenu3begin
{
	height: 16px;
	border:0px;
	padding: 2px 2px 0px 2px;
	vertical-align: middle;

	color: #FFDD22;
	font: 10px Arial, Verdana, Helvetica, sans-serif;
	background-color: #525845;
}
.topmenu3
{
	height: 16px;
	border:1px ridge;
	border-color: #58673B #171A12 #171A12 #58673B; 
	padding: 2px 2px 0px 2px;
	vertical-align: middle;

	color: #FFDD22;
	font: 10px Arial, Verdana, Helvetica, sans-serif;
	background-color: #525845;
}
.topmenu3end
{
	height: 16px;
	color: #FFDD22;
	font: 10px Arial, Verdana, Helvetica, sans-serif;
	background-color: #525845;
}
.topmenu3:hover 
{ 
	color: #FFFF99;
	border:1px inset;
	border-color: #58673B #171A12 #171A12 #58673B; 
	background-color: #7C846B;
	text-decoration: none;
}


.topmenu1_link, a.topmenu1_link, a.topmenu1_link:visited, .topmenu2_link, a.topmenu2_link, a.topmenu2_link:visited, .topmenu3_link, a.topmenu3_link, a.topmenu3_link:visited 
{
	vertical-align: middle;
	height: 16px;

	color: #FFDD22;
	font-weight:bold;
	text-decoration: none;
}
.topmenu1_link:hover, .topmenu2_link:hover, .topmenu3_link:hover
{
	vertical-align: middle;

	color: #D0DFB2;
	font-weight:bold;
	text-decoration: none;
}

